# swmm-pandas

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  release.yml  test.yml  tests.yml
docs/: Makefile  conf.py  installation.rst
docs/reference/: index.rst
docs/reference/input/: index.rst
scripts/: generate_input_sections.py
src/swmm/pandas/: __init__.py  constants.py  units.py
src/swmm/pandas/input/: README.md  __init__.py  _patch.py  _section_classes.py  input.py  model.py  sections.py
src/swmm/pandas/output/: __init__.py  output.py  parquet.py  structure.py  tools.py
src/swmm/pandas/report/: __init__.py  report.py
tests/: test_input.py  test_input_file.py  test_ouput.py  test_report.py  test_units.py
tests/data/: .gitignore  LID_Model.inp  Model.inp  bench_out.out  bench_patch.inp  no_timestep_critical.rpt  raw.rpt
