[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "swmm-pandas"
version = "0.11.1"
description = "Pandorable interface to SWMM5 input and output files"
authors = [
    { name = "Constantine Karos", email = "ckaros@outlook.com" },
    { name = "See README.md" },
]
dependencies = ["julian", "pandas>=2.1", "swmm-toolkit>=0.16.0"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "CC BY 4.0" }
keywords = ["swmm5", "swmm", "stormwater", "hydraulics", "hydrology", ""]
maintainers = [{ email = "ckaros@outlook.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/karosc/swmm-pandas"

[project.optional-dependencies]
geo = ["geopandas>=1.0.1"]


[tool.uv.sources]
swmm-toolkit = { index = "pypi" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


[tool.uv.build-backend]
source-exclude = ["/scripts", "/tests", "/docs"]
module-name = "swmm/pandas"
namespace = true

[tool.mypy]
allow_redefinition = true
pretty = true
warn_no_return = false
ignore_missing_imports = true
disallow_any_decorated = false
explicit_package_bases = true
mypy_path = "src"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.6.4",
    "furo>=2024.8.6",
    "ipython>=8.18.1",
    "matplotlib>=3.9.2",
    "mypy>=1.13.0",
    "myst-parser>=3.0.1",
    "nbsphinx>=0.9.5",
    "numpydoc>=1.8.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "types-pyyaml>=6.0.12.20250915",
]
geo = ["geopandas>=1.0.1"]
